--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://cdns.klimg.com/mav-prod-resized/1280x720/ori/newsCover/2024/9/24/1727159705841-o7npu.jpeg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(hero.jpeg);
             background-size: cover;
             background-position: center;
             height: 100vh;
